# cat_purr_project_manager_package

./: .gitignore  pyproject.toml  readme.md
purr/: __init__.py  cli.py
purr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
purr/classes/: __init__.py  architecture.py  framework.py
purr/scripts/: init_project.py  purr_config.py
purr/utils/: __init__.py  folder_setup.py  get_repository.py  save_file.py  selector.py
